assets/css/landing.css
.section-footer-heading {
  letter-spacing: 0.21rem;
}

.side-text h1 {
  margin: 0px;
}

.side-text p {
  margin: 0px;
}

.heading-first {
  font-size: 3.8rem;
  letter-spacing: 0.24rem;
}

.heading-keyword {
  font-size: 4.8rem;
  letter-spacing: 0.3rem;
}

.heading-space {
  font-size: 4.06rem;
  letter-spacing: 0.8rem;
}

.main-image {
  width: 42%;
}

@media screen and (max-width: 1024px) {
  .main-view {
    margin-top: 15vh;
  }

  .main-image {
    width: 85%;
  }

  .side-text {
    margin-top: 5vh;
    font-size: 3rem;
    width: auto;
  }

  .heading-first {
    font-size: 3.8rem;
    letter-spacing: 0.24rem;
  }

  .heading-keyword {
    font-size: 4.8rem;
    letter-spacing: 0.3rem;
  }

  .heading-space {
    font-size: 4.06rem;
    letter-spacing: 0.8rem;
  }
}

@media screen and (max-width: 1024px) and (min-height: 1080px) {
  .heading-first {
    font-size: 5.8rem;
    /* letter-spacing: 0.24rem; */
  }

  .heading-keyword {
    font-size: 6.8rem;
    letter-spacing: 0.6rem;
  }

  .heading-space {
    font-size: 6.06rem;
    letter-spacing: 1.1rem;
  }

  .side-text h1 {
    transform: scale(0.8);
  }
}

@media screen and (max-width: 1024px) and (max-height: 1024px) {
  .main-image {
    width: 65%;
  }
}

@media screen and (max-width: 768px) {
  .main-image {
    width: 85%;
  }
}

@media screen and (max-width: 510px) {
  .main-view {
    margin-top: 20vh;
  }

  .side-text {
    position: absolute;
    top: 47vh;
    font-size: 2rem;
    /* background: #ff00ffaa; */
  }

  .main-image {
    position: absolute;
    width: 91%;
    top: 15vh;
  }

  .section-footer .container {
    padding-bottom: 1.5rem;
  }
}

@media screen and (max-width: 320px) {
  .heading-first {
    font-size: 3rem;
    letter-spacing: 0.35rem;
  }

  .heading-keyword {
    font-size: 4rem;
  }

  .heading-space {
    font-size: 3.2rem;
    letter-spacing: 0.85rem;
  }
}

